--- a/app/templates/form.html
+++ b/app/templates/form.html
@@ -1,17 +1,6 @@
-<!doctype html>
-<html lang="en">
-<head>
-    <title>Try django</title>
-    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
-</head>
-<body>
-
-
-<!--     
-<form method="POST" action="." >{% csrf_token %} 
-  {{form.as_p}}
-  <button type="submit">Send</button>
-</form> -->
+{% extends "base.html" %}
+{% include "group.html" %} 
+{% block content %}
 <form method="post">
     {% csrf_token %}
     {{ form.as_p }}
@@ -19,6 +8,4 @@
     {{ muscle_form.as_p }}
     <button type="submit">Create Exercise</button>
 </form>
-
-</body>
-</html>
+{% endblock %}
