--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -1,4 +1,5 @@
 {% load static %}
+{% load custom_filters %}
 <!doctype html>
 <html lang="en">
     <style>
@@ -26,7 +27,6 @@
   </head>
   <body>
     {% include 'navbar.html' %}
-    nav
     <div class="container">
       <div class="row">
         <div class="col-6 mx-auto">
