--- a/app/templates/navbar.html
+++ b/app/templates/navbar.html
@@ -1,3 +1,4 @@
+{% load custom_filters %}
 <nav class="navbar navbar-expand-lg bg-body-tertiary">
   <div class="container-fluid">
     <a class="navbar-brand" href="/">GYM</a>
