--- a/app/staticfiles/css/styles.css
+++ b/app/staticfiles/css/styles.css
@@ -1,15 +1,67 @@
-
 table {
-    border-collapse: collapse;
-    width: 100%;
-}
+        border-collapse: collapse;
+        width: 100%;
+    }
 
-th, td {
-    border: 1px solid #dddddd;
-    text-align: left;
-    padding: 8px;
-}
+    th, td {
+        border: 1px solid #dddddd;
+        text-align: left;
+        padding: 8px;
+    }
 
-th {
-    background-color: #f2f2f2;
-}
+    th {
+        background-color: #f2f2f2;
+    }
+    nav {
+      background-color: #2d2d2d;
+    }
+   .navbar-nav .nav-link.exercise {
+      color: whitesmoke;
+    }
+    form {
+    max-width: 350px; /* Adjust this value based on your design */
+    margin: auto;
+    text-align: center;
+    margin-bottom: 50px;
+    }
+
+    .current-lifts {
+        margin-bottom: 15px;
+    }
+    p {
+        margin-bottom: 0;
+    }
+
+    label, button, .new-exercise, .exercise-choices select {
+        display: block;
+        margin-bottom: 8px;
+    }
+
+
+    input, .submit-button, select {
+        width: 100%;
+        padding: 8px;
+        box-sizing: border-box;
+        text-align: center;
+    }
+
+    .submit-button {
+        background-color: #4CAF50; /* Green background color */
+        margin-top: 5px;
+        color: white; /* White text color */
+        border: none; /* Remove border */
+        padding: 10px 15px; /* Add padding */
+        text-align: center; /* Center text */
+        text-decoration: none; /* Remove underline */
+        display: inline-block; /* Make it an inline element */
+        font-size: 16px; /* Increase font size */
+        margin: 0; /* Remove default margin */
+        border-radius: 5px; /* Optional: Add some border radius for aesthetics */
+    }
+
+    button:hover {
+        background-color: #45a049;
+        }
+    h1, h3 {
+        text-align: center;
+    }
