--- a/app/templates/navbar.html
+++ b/app/templates/navbar.html
@@ -16,31 +16,21 @@
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
       <ul class="navbar-nav me-auto mb-2 mb-lg-0">
         <li class="nav-item">
-          <a class="nav-link active" aria-current="page" href="/">All exercises</a>
+          <a class="nav-link exercise" aria-current="page" href="/">All exercises</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="/add_exercise">Add exercise</a>
+          <a class="nav-link exercise" href="/add_exercise">Add exercise</a>
         </li>
       </ul>
-      <!-- <form class="d-flex" role="search" action="/search/">
-        <input
-          class="form-control me-2"
-          type="search"
-          name = 'q'
-          placeholder="Search"
-          aria-label="Search"
-        />
-        <button class="btn btn-outline-success" type="submit">Search</button>
-      </form> -->
        <form class="d-flex" action="{% url 'exercise_detail' %}" method="GET">
     <input
-      class="form-control me-2"
+      class="form-control me-2 w-100"
       type="number"
       name="exercise_id"
-      placeholder="Enter Exercise ID to find"
+      placeholder="Exercise ID to find"
       aria-label="Exercise ID"
     />
-    <button class="btn btn-outline-primary" type="submit">Go</button>
+    <button class="btn btn-outline-primary custom-go-btn" type="submit">Go</button>
 </form>
     </div>
   </div>
