--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -1,5 +1,4 @@
 {% load static %}
-{% load custom_filters %}
 <!doctype html>
 <html lang="en">
   <head>
@@ -12,7 +11,7 @@
   </head>
   <body>
     {% include 'navbar.html' %}
-    <div class="container">
+    <div class="below-nav">
       <div class="row">
         <div class="col-6 mx-auto">
           {% block content %} 
