--- a/app/templates/form.html
+++ b/app/templates/form.html
@@ -1,10 +1,8 @@
 {% extends "base.html" %}
-{% load custom_filters %}
-group
-group
 {% block content %}
+<h1>Input Exercise Details</h1>
 {% include "group.html" %} 
-<form method="post">
+<form class="inputed-data" method="post">
     {% csrf_token %}
     <div class="exercise-choices">
          <label class="form-label" for="{{ form.exercise_name.id_for_label }}">Exercise name:</label>
