--- a/app/templates/navbar.html
+++ b/app/templates/navbar.html
@@ -1,4 +1,3 @@
-{% load custom_filters %}
 <nav class="navbar navbar-expand-lg bg-body-tertiary">
   <div class="container-fluid">
     <a class="navbar-brand" href="/">GYM</a>
@@ -25,10 +24,10 @@
        <form class="d-flex" action="{% url 'exercise_detail' %}" method="GET">
     <input
       class="form-control me-2 w-100"
-      type="number"
-      name="exercise_id"
-      placeholder="Exercise ID to find"
-      aria-label="Exercise ID"
+      type="text"
+      name="exercise_name"
+      placeholder="Exercise Name to find"
+      aria-label="Exercise Name"
     />
     <button class="btn btn-outline-primary custom-go-btn" type="submit">Go</button>
 </form>
